--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "dev": "vite"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@vitejs/plugin-vue": "^6.0.3",
